--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
     <div class="flexbs" id="Div_Header">
         <!-- I H1 taggen finns en div med  ID. Det ID:t används i funktionen goodvibespopup(). Diven ändras till en text när du klickar på Good vibes knappen. -->
-        <h1><div id="goodvibes"></div></h1>
+        <h1 class="background" id="goodvibes"> </h1>
+        <br>
         <!-- En div med ID som ändras i funktionen displayTime(). Den visar den aktuella tiden då knappen Time har tryckts. -->
-        <b> <div id="tid"></div> </b>
+        <b><p class="background" id="text_time"></p></b>
         <br>
         <div id="bild">
             <!-- Vanlig bild med en satt height och width och id som används i funktionen pictureChange(). -->
-            <img src="harambe.jpg" height="20%" width="12%" id="idBild">
+            <img src="harambe.jpg"  id="idBild">
         </div>
     </div>
     <!-- En div med alla knappar. Det finns divs i denna diven för att göra koden och strukturen enklare. Den div med id:t knappar_div är ansvarig för bakgrunden i knapprektangeln. -->
@@ -36,9 +37,9 @@
             <button class="allbuttons" onclick="pictureShow();">Show picture</button>
         </div>
         <div>
-            <button class="allbuttons">Header</button>
-            <button class="allbuttons">Remove header</button>
-            <button class="allbuttons">Show header</button>
+            <button class="allbuttons" onclick="headerMaker()">Header</button>
+            <button class="allbuttons" onclick="headerRemove()">Remove header</button>
+            <button class="allbuttons" onclick="headerDisplay()">Show header</button>
         </div>
     </div>
 </body>
